# sysframe

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
documentation/: MEMBRIDGE.md  PYBYTES.md  README_membridge.md
setup/: pyproject.toml  setup.py
sysframe/: __init__.py
sysframe/membridge/: __init__.py  membridge.c  membridge.pyi
sysframe/pybytes/: README_pybytes.md  SFS_D.c  __init__.py  conversions.c  conversions.h  pybytes.c  pybytes.h  pybytes.pyi  sbs_2.c
sysframe/pybytes/sbs_main/: sbs_2.c  sbs_2.h
sysframe/pybytes/sbs_old/: sbs_1.c  sbs_1.h
sysframe/pybytes/sfs_main/: sfs_1.c
tests/: pybytes.py  test_membridge.py  test_pybytes.py
