[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sysframe"
version = "0.2.2"
description = "A collection of modules useful for system programming with Python. NOTE: STILL IN DEVELOPMENT"
url = "https://github.com/svenboertjens/sysframe"
authors = [{ name = "Sven Boertjens", email = "boertjens.sven@gmail.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
python_requires = ">=3.6"